# Datatalks-ML-Zoomcamp

./: .gitignore  README.md
capstone1/: Dockerfile  README.md  capstone1_task.md  main.py  mlflow.db  pyproject.toml
capstone1/mlruns/1/models/m-091ed029397e4309afe8074763407872/artifacts/: MLmodel  model.pkl  python_env.yaml  requirements.txt
capstone1/mlruns/1/models/m-0f8c3280b51d4799a6338885806ce2b1/artifacts/: MLmodel
capstone1/mlruns/1/models/m-1963973d7aa94c48857b7be96ed9e8f1/artifacts/: MLmodel  model.pkl
capstone1/mlruns/1/models/m-1d3cdfb68c45437693166b91200f7000/artifacts/: MLmodel
capstone1/mlruns/1/models/m-21b3b66dc8ca4d6abaf7d170ab203216/artifacts/: MLmodel  conda.yaml  model.pkl
capstone1/mlruns/1/models/m-40996b0ccac84e788e3d3c8bec0b591c/artifacts/: MLmodel  model.pkl
capstone1/mlruns/1/models/m-43920d895f414f2ca729a7b0672b11b2/artifacts/: MLmodel
capstone1/mlruns/1/models/m-4fcd1ff210814a649992e41f090de7db/artifacts/: MLmodel
capstone1/mlruns/1/models/m-5076a002be3f4effa2889c3ee12aaae4/artifacts/: MLmodel  model.pkl
capstone1/mlruns/1/models/m-5472c7d9c75f485fa55754a19cd19604/artifacts/: MLmodel  model.pkl
capstone1/mlruns/1/models/m-56a63822395c4212824c86ddf3ff8028/artifacts/: MLmodel
capstone1/models/: best_model.pkl
capstone1/notebooks/: eda_deep_dive.ipynb
capstone1/src/: app.py  data_loader.py  models.py  predict.py  train.py
capstone1/templates/: index.html  results.html
capstone2/: Dockerfile  README.md  capstone2_task.md  pyproject.toml  verify_api.py
capstone2/notebooks/: notebook.ipynb
capstone2/src/: app.py  models.py  predict.py  train.py
capstone2/templates/: index.html  result.html
homeworks/: hw5_solve.py  (+3 more)
homeworks/hw05/: README.md  hw5_solve.py  hw5_task.md  pyproject.toml  q3.py  q4_app.py  q4_client.py
(+88 files in other folders)
