[project]
name = "capstone1"
version = "0.1.0"
description = "Capstone 1 Project for Datatalks.Club ML Zoomcamp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "mlflow>=2.19.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.4",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.3",
    "pip",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
