[project]
name = "capstone2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "mlflow>=3.8.1",
    "python-multipart>=0.0.21",
    "ruff>=0.14.10",
]

[dependency-groups]
dev = [
    "fastapi>=0.128.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
    "xgboost>=3.1.2",
]
